--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-uglify": "^1.2.0",
-    "gulp-usemin": "^0.3.11"
+    "gulp-usemin": "^0.3.11",
+    "gulp-wrapper": "^1.0.0"
   }
 }
